opam-version: "2.0"
name: "monorobot"
version: "0.1"
license: "MIT"
synopsis: "Notification bot for monorepos"
description: "Notification bot to handle webhook events from monorepos and post notifications to Slack."
maintainer: "Ahrefs <github@ahrefs.com>"
authors: "Ahrefs <github@ahrefs.com>"
homepage: "https://github.com/ahrefs/monorobot"
bug-reports: "https://github.com/ahrefs/monorobot/issues"
dev-repo: "git+https://github.com/ahrefs/monorobot.git"
depends: [
 "atd" {>= "2.2.1"}
 "atdgen" {>= "2.2.1"}
 "atdgen-runtime" {>= "2.2.1"}
 "base64" {>= "3.0.0"}
 "biniou"
 "cmdliner" {>= "1.1.0"}
 "cstruct"
 "devkit" {>= "1.20210120"}
 "dune" {>= "2.5.0"}
 "extlib" {>= "1.7.8"}
 "hex"
 "lwt" {>= "5.1.0"}
 "lwt_ppx" {>= "2.0.0"}
 "nocrypto"
 "ocaml" {>= "4.14.0"}
 "ocamlformat" { with-dev-setup & = "0.26.2" }
 "ocurl" {>= "0.9.2"}
 "omd" {< "2"}
 "re2"
 "sexplib0" {>= "v0.16.0"}
 "uri"
 "yojson"
]
build: ["dune" "build" "-p" name "-j" jobs]
x-ci-accept-failures: [
  "freebsd"
  "macos-homebrew"
  "lower-bound"
]
