opam-version: "2.0"
name: "monorobot"
version: "0.1"
license: "MIT"
synopsis: "Notification bot for monorepos"
description: "Notification bot to handle webhook events from monorepos and post notifications to Slack."
maintainer: "Ahrefs <github@ahrefs.com>"
authors: "Ahrefs <github@ahrefs.com>"
homepage: "https://github.com/ahrefs/monorobot"
bug-reports: "https://github.com/ahrefs/monorobot/issues"
dev-repo: "git+https://github.com/ahrefs/monorobot.git"
depends: [
 "ocaml" {>= "4.14.0"}
 "dune" {>= "2.9.0"}
 "atd" {>= "2.2.1"}
 "atdgen" {>= "2.2.1"}
 "atdgen-runtime" {>= "2.2.1"}
 "base64" {>= "3.0.0"}
 "biniou"
 "cmdliner" {>= "1.1.0"}
 "digestif" {>= "1.2.0"}
 "devkit" {>= "1.20210120"}
 "extlib" {>= "1.7.8"}
 "lwt" {>= "5.1.0"}
 "lwt_ppx" {>= "2.0.0"}
 "ptime" {>= "1.2.0"}
 "ocamldiff"
 "re2"
 "uri"
 "omd" {< "2"}
 "yojson"
 "ocamlformat" { with-dev-setup & = "0.26.2" }
]
build: ["dune" "build" "-p" name "-j" jobs]
