opam-version: "2.0"
name: "monorobot"
version: "0.1"
license: "MIT"
synopsis: "Notification bot for monorepos"
description: "Notification bot to handle webhook events from monorepos and post notifications to Slack."
maintainer: "Ahrefs <github@ahrefs.com>"
authors: "Ahrefs <github@ahrefs.com>"
homepage: "https://github.com/ahrefs/monorobot"
bug-reports: "https://github.com/ahrefs/monorobot/issues"
dev-repo: "git+https://github.com/ahrefs/monorobot.git"
depends: [
 "ocaml" {>= "4.14.0"}
 "dune" {>= "2.9.0"}
 "atd" {>= "2.14.0"}
 "atdgen" {>= "2.14.0"}
 "atdgen-runtime" {>= "2.14.0"}
 "base64" {>= "3.0.0"}
 "biniou"
 "cmdliner" {>= "1.1.0"}
 "digestif" {>= "1.2.0"}
 "devkit" {>= "1.20240429"}
 "extlib" {>= "1.7.8"}
 "lwt" {>= "5.7.0"}
 "lwt_ppx" {>= "2.0.0"}
 "ptime" {>= "1.2.0"}
 "ocamldiff" {>= "1.2"}
 "sqlite3" {>= "5.1.0"}
 "sqlgg" {>= "20231201"}
 "re2" {>= "0.16.0"}
 "uri"
 "omd" {< "2"}
 "yojson"
 "ocamlformat" { with-dev-setup & = "0.26.2" }
 "ocurl" {>= "0.9.2"}
 "sexplib0" {>= "v0.16.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
