opam-version: "2.0"
name: "notabot"
version: "0.1"
synopsis: "Notification bot"
description: "Notification bot to handle webhook events and post notifications to Slack."
maintainer: "Ahrefs <github@ahrefs.com>"
authors: "Ahrefs <github@ahrefs.com>"
homepage: "https://github.com/ahrefs/notabot"
bug-reports: "https://github.com/ahrefs/notabot/issues"
dev-repo: "git+https://github.com/ahrefs/notabot.git"
depends: [
 "ocaml" {>= "4.03.0"}
 "sha"
 "atdgen"
 "httpaf"
 "httpaf-lwt-unix"
 "base"
 "stdio"
 "lwt"
]
build: ["dune" "build" "-p" name]
