opam-version: "2.0"
name: "notabot"
version: "0.1"
synopsis: "Notification bot"
description: "Notification bot to handle webhook events and post notifications to Slack."
maintainer: "Ahrefs <github@ahrefs.com>"
authors: "Ahrefs <github@ahrefs.com>"
homepage: "https://github.com/ahrefs/notabot"
bug-reports: "https://github.com/ahrefs/notabot/issues"
dev-repo: "git+https://github.com/ahrefs/notabot.git"
depends: [
 "ocaml" {>= "4.03.0"}
 "dune" {>= "2.5.0"}
 "atdgen"
 "base"
 "cmdliner"
 "devkit"
 "ocurl"
 "hex"
 "lwt"
 "lwt_ppx"
 "nocrypto"
 "stdio"
 "uri"
 "ocamlformat" {dev & = "0.13.0"}
]
build: ["dune" "build" "-p" name]
