(library
 (name lib)
 (libraries
  atdgen
  atdgen-runtime
  base64
  biniou
  curl
  curl.lwt
  devkit
  devkit.core
  digestif
  extlib
  lwt
  lwt.unix
  omd
  ptime
  ptime.clock
  re2
  sexplib0
  uri
  yojson)
 (preprocess
  (pps lwt_ppx)))

(rule
 (targets common_t.ml common_t.mli)
 (deps common.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets common_j.ml common_j.mli)
 (deps common.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets github_t.ml github_t.mli)
 (deps github.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets github_j.ml github_j.mli)
 (deps github.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets buildkite_t.ml buildkite_t.mli)
 (deps buildkite.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets buildkite_j.ml buildkite_j.mli)
 (deps buildkite.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets slack_t.ml slack_t.mli)
 (deps slack.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets slack_j.ml slack_j.mli)
 (deps slack.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets rule_t.ml rule_t.mli)
 (deps rule.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets rule_j.ml rule_j.mli)
 (deps rule.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets config_t.ml config_t.mli)
 (deps config.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets config_j.ml config_j.mli)
 (deps config.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets state_t.ml state_t.mli)
 (deps state.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets state_j.ml state_j.mli)
 (deps state.atd)
 (action
  (run atdgen -j -j-std %{deps})))
