(library
 (name lib)
 (libraries
  atdgen-runtime
  base64
  biniou
  curl
  curl.lwt
  devkit
  devkit.core
  digestif
  extlib
  lwt
  lwt.unix
  ocamldiff
  omd
  ptime
  ptime.clock
  re2
  sexplib0
  sqlgg.sqlite3
  sqlgg.traits
  sqlite3
  uri
  yojson
  text_cleanup)
 (preprocess
  (pps lwt_ppx)))

(rule
 (targets common_t.ml common_t.mli common_j.ml common_j.mli)
 (deps common.atd)
 (action
  (progn
   (run %{bin:atdgen} -j -j-std %{deps})
   (run %{bin:atdgen} -t %{deps}))))

(rule
 (targets github_t.ml github_t.mli github_j.ml github_j.mli)
 (deps github.atd)
 (action
  (progn
   (run %{bin:atdgen} -j -j-std %{deps})
   (run %{bin:atdgen} -t %{deps}))))

(rule
 (targets buildkite_t.ml buildkite_t.mli buildkite_j.ml buildkite_j.mli)
 (deps buildkite.atd)
 (action
  (progn
   (run %{bin:atdgen} -j -j-std %{deps})
   (run %{bin:atdgen} -t %{deps}))))

(rule
 (targets slack_t.ml slack_t.mli slack_j.ml slack_j.mli)
 (deps slack.atd)
 (action
  (progn
   (run %{bin:atdgen} -j -j-std %{deps})
   (run %{bin:atdgen} -t %{deps}))))

(rule
 (targets rule_t.ml rule_t.mli rule_j.ml rule_j.mli)
 (deps rule.atd)
 (action
  (progn
   (run %{bin:atdgen} -j -j-std %{deps})
   (run %{bin:atdgen} -t %{deps}))))

(rule
 (targets config_t.ml config_t.mli config_j.ml config_j.mli)
 (deps config.atd)
 (action
  (progn
   (run %{bin:atdgen} -j -j-std %{deps})
   (run %{bin:atdgen} -t %{deps}))))

(rule
 (targets state_t.ml state_t.mli state_j.ml state_j.mli)
 (deps state.atd)
 (action
  (progn
   (run %{bin:atdgen} -j -j-std %{deps})
   (run %{bin:atdgen} -t %{deps}))))

(rule
 (targets debug_db_t.ml debug_db_t.mli debug_db_j.ml debug_db_j.mli)
 (deps debug_db.atd)
 (action
  (progn
   (run %{bin:atdgen} -j -j-std %{deps})
   (run %{bin:atdgen} -t %{deps}))))

(rule
 (target failed_builds_webhook_gen.ml)
 (deps ../db/sql/failed_builds_webhook.sql)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:sqlgg} -gen caml_io -name make -params unnamed %{deps}))))
