(executables
 (names test github_link_test)
 (libraries lib base base.caml devkit devkit.core extlib lwt.unix stdio
   yojson)
 (preprocess
  (pps lwt_ppx)))

(rule
 (deps
  (source_tree ../mock_states)
  (source_tree ../mock_payloads)
  (source_tree ../mock_slack_events)
  (source_tree github-api-cache)
  monorobot.json
  secrets.json)
 (action
  (with-stdout-to
   slack_payloads.out
   (run ./test.exe))))

(rule
 (alias runtest)
 (action
  (diff slack_payloads.expected slack_payloads.out)))

(rule
 (alias runtest)
 (action
   (run ./github_link_test.exe)))
