(executables
 (names test github_link_test longest_prefix_test)
 (libraries lib devkit devkit.core extlib lwt.unix yojson)
 (preprocess
  (pps lwt_ppx)))

(rule
 (deps
  (source_tree ../mock_states)
  (source_tree ../mock_payloads)
  (source_tree ../mock_slack_events)
  (source_tree github-api-cache)
  (source_tree slack-api-cache)
  monorobot.json
  secrets.json)
 (action
  (with-stderr-to
   log_err.out
   (with-stdout-to
    slack_payloads.out
    (run ./test.exe)))))

(rule
 (alias runtest)
 (action
  (diff slack_payloads.expected slack_payloads.out)))

(rule
 (alias runtest)
 (action
  (diff log_err.expected log_err.out)))


(rule
 (alias runtest)
 (action
  (run ./github_link_test.exe)))

(rule
 (alias runtest)
 (action
  (run ./longest_prefix_test.exe)))
